use crispy form in holiday module

--- a/templates/admin/employees.html
+++ b/templates/admin/employees.html
@@ -63,13 +63,13 @@
 						<div class="col-md-4 col-sm-6 col-12 col-lg-4 col-xl-3">
 							<div class="profile-widget">
 								<div class="profile-img">
-									<a href="employee/profile/{{x.id}}" class="avatar"><img src="" alt="employee image"></a>
+									<a href="{% url 'AdminProfileView' x.id %}" class="avatar"><img src="" alt="employee image"></a>
 								</div>
 								<div class="dropdown profile-action">
 <!--									<a class="dropdown-item px-1 py-0 rounded d-sm-block text-center" href="{% url 'AdminEditEmployee' id=x.id %}" data-toggle="modal" data-target="#employee_edit"><i class="fa fa-pencil-square-o"></i></a>-->
 									<a class="mx-1 px-2 py-0 text-danger edit-icon" href="employee/delete/{{x.id}}" data-toggle="modal" data-target="#delete_employee" data-href="{% url 'AdminDeleteEmployee' x.id %}"><i class="fa fa-trash-o m-r-5"></i></a>
 								</div>
-								<h4 class="user-name m-t-10 mb-0 text-ellipsis"><a href="profile/{{x.id}}">{{x.username}}</a></h4>
+								<h4 class="user-name m-t-10 mb-0 text-ellipsis"><a href="{% url 'AdminProfileView' x.id %}">{{x.username}}</a></h4>
 								<div class="small text-muted">{{x.department}}</div>
 							</div>
 						</div>
