--- a/templates/admin/edit_holidays.html
+++ b/templates/admin/edit_holidays.html
@@ -3,27 +3,34 @@
 {% block body %}
 
 		<!-- Edit Holiday Modal -->
-		<div class="mt-5 pt-5" id="edit_holiday" role="dialog">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-						<div class="modal-body">
-						<form method="post" action="holidays/update/{{up_holiday_details.id}}" id="edit_holiday_form">
-							{% csrf_token %}
-							<div class="form-group">
-								<label for="up_holidaytitle">Holiday Title <span class="text-danger">*</span></label>
-								<input class="form-control" type="text" id="up_holidaytitle" name="up_holiday_title" value="{{up_holiday_details.holiday_title}}">
+				<div class="modal custom-modal fade" id="edit_holiday" role="dialog">
+					<div class="modal-dialog modal-dialog-centered" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">Add Holiday</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
 							</div>
-							<div class="form-group">
-								<label for="up_holidaytitle">Holiday Date <span class="text-danger">*</span></label>
-								<input class="form-control" type="date" id="up_holidaydate" name="up_holiday_date" value="{{up_holiday_details.holiday_date|date:'Y-m-d' }}">
+							<div class="modal-body">
+								<form method="post" action="holidays/update/{{up_holiday_details.id}}" id="edit_holiday_form">
+									{% csrf_token %}
+									<div class="form-group">
+										<label for="up_holidaytitle">Holiday Title <span class="text-danger">*</span></label>
+										<input class="form-control" type="text" id="up_holidaytitle" name="up_holiday_title" value="{{up_holiday_details.holiday_title}}">
+									</div>
+									<div class="form-group">
+										<label for="up_holidaytitle">Holiday Date <span class="text-danger">*</span></label>
+										<input class="form-control" type="date" id="up_holidaydate" name="up_holiday_date" value="{{up_holiday_details.holiday_date|date:'Y-m-d' }}">
+									</div>
+									<div class="submit-section">
+										<button class="btn btn-primary submit-btn" type="submit">Submit</button>
+									</div>
+								</form>
 							</div>
-							<div class="submit-section">
-								<button class="btn btn-primary submit-btn" type="submit">Submit</button>
-							</div>
-						</form>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<!-- /Edit Holiday Modal -->
+				<!-- /Edit Holiday Modal -->
+
 {% endblock body %}
