--- a/templates/admin/edit_holidays.html
+++ b/templates/admin/edit_holidays.html
@@ -1,9 +1,8 @@
-{% extends 'admin/base.html' %}
+{% load crispy_forms_tags %}
 {% load static %}
-{% block body %}
 
 		<!-- Edit Holiday Modal -->
-				<div class="modal custom-modal fade" id="edit_holiday" role="dialog">
+				<div class="modal fade" id="edit_holiday_model" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
 					<div class="modal-dialog modal-dialog-centered" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
@@ -13,15 +12,13 @@
 								</button>
 							</div>
 							<div class="modal-body">
-								<form method="post" action="holidays/update/{{up_holiday_details.id}}" id="edit_holiday_form">
+								<form method="post" action="holidays/update/{{edit_holiday.id}}" id="edit_holiday_form">
 									{% csrf_token %}
 									<div class="form-group">
-										<label for="up_holidaytitle">Holiday Title <span class="text-danger">*</span></label>
-										<input class="form-control" type="text" id="up_holidaytitle" name="up_holiday_title" value="{{up_holiday_details.holiday_title}}">
+										{{ form.holiday_title|as_crispy_field }}
 									</div>
 									<div class="form-group">
-										<label for="up_holidaytitle">Holiday Date <span class="text-danger">*</span></label>
-										<input class="form-control" type="date" id="up_holidaydate" name="up_holiday_date" value="{{up_holiday_details.holiday_date|date:'Y-m-d' }}">
+										{{ form.holiday_date|as_crispy_field }}
 									</div>
 									<div class="submit-section">
 										<button class="btn btn-primary submit-btn" type="submit">Submit</button>
@@ -32,5 +29,3 @@
 					</div>
 				</div>
 				<!-- /Edit Holiday Modal -->
-
-{% endblock body %}
