--- a/templates/admin/profile.html
+++ b/templates/admin/profile.html
@@ -45,23 +45,23 @@
 												<div class="col-md-7">
 													<ul class="personal-info">
 														<li>
-															<div class="title">Phone:</div>
+															<div class="title">Phone</div>
 															<div class="text"><a href="">{{profile.phone}}</a></div>
 														</li>
 														<li>
-															<div class="title">Email:</div>
+															<div class="title">Email</div>
 															<div class="text"><a href="">{{profile.email}}</a></div>
 														</li>
 														<li>
-															<div class="title">Birthday:</div>
+															<div class="title">Birthday</div>
 															<div class="text">24th July</div>
 														</li>
 														<li>
-															<div class="title">Address:</div>
+															<div class="title">Address</div>
 															<div class="text">{{profile.address}}</div>
 														</li>
 														<li>
-															<div class="title">Gender:</div>
+															<div class="title">Gender</div>
 															<div class="text">Male</div>
 														</li>
 													</ul>
