--- a/templates/admin/employees.html
+++ b/templates/admin/employees.html
@@ -20,7 +20,7 @@
 								<button class="btn add-btn" onclick="addEmployee()"><i class="fa fa-plus"></i> Add Employee</button>
 								<div class="view-icons">
 									<a href="{% url 'AdminEmployeeView' %}" class="grid-view btn btn-link active"><i class="fa fa-th"></i></a>
-									<a href="{% url 'AdminEmployeeListView' %}" class="list-view btn btn-link"><i class="fa fa-bars"></i></a>
+									<a href="{% url 'AdminEmployeeListView' %}" class="list-view btn btn-link"><i class="fa fa-list"></i></a>
 								</div>
 							</div>
 						</div>
@@ -58,6 +58,8 @@
 						</div>
                     </div>
 					<!-- Search Filter -->
+
+				<!-- Page Content -->
 					<div class="row staff-grid-row">
 						{% for x in employeedetails %}
 						<div class="col-md-4 col-sm-6 col-12 col-lg-4 col-xl-3">
@@ -66,8 +68,7 @@
 									<a href="{% url 'AdminProfileView' x.id %}" class="avatar"><img src="" alt="employee image"></a>
 								</div>
 								<div class="dropdown profile-action">
-<!--									<a class="dropdown-item px-1 py-0 rounded d-sm-block text-center" href="{% url 'AdminEditEmployee' id=x.id %}" data-toggle="modal" data-target="#employee_edit"><i class="fa fa-pencil-square-o"></i></a>-->
-									<a class="mx-1 px-2 py-0 text-danger edit-icon" href="employee/delete/{{x.id}}" data-toggle="modal" data-target="#delete_employee" data-href="{% url 'AdminDeleteEmployee' x.id %}"><i class="fa fa-trash-o m-r-5"></i></a>
+									<button class="dropdown-item px-1 py-0 rounded d-sm-block text-center text-danger" onclick="deleteEmployee({{x.id}})"><i class="las la-lg la-trash"></i></button>
 								</div>
 								<h4 class="user-name m-t-10 mb-0 text-ellipsis"><a href="{% url 'AdminProfileView' x.id %}">{{x.username}}</a></h4>
 								<div class="small text-muted">{{x.department}}</div>
@@ -84,7 +85,7 @@
 
 				
 				<!-- Delete Employee Modal -->
-				<div class="modal custom-modal fade" id="delete_employee" role="dialog">
+				<div class="modal custom-modal fade" id="delete_employee_model" role="dialog">
 					<div class="modal-dialog modal-dialog-centered">
 						<div class="modal-content">
 							<div class="modal-body">
@@ -95,7 +96,7 @@
 								<div class="modal-btn delete-action">
 									<div class="row">
 										<div class="col-6">
-											<a id="deleteBtn" href="#" class="btn btn-primary continue-btn">Delete</a>
+											<a id="confirmDeleteBtn" href="#" class="btn btn-primary continue-btn">Delete</a>
 										</div>
 										<div class="col-6">
 											<a href="#" data-dismiss="modal" class="btn btn-primary cancel-btn">Cancel</a>
@@ -123,6 +124,13 @@ function addEmployee() {
             $("#add_employee_model").modal('show');
         }
     });
+}
+function deleteEmployee(deleteEmployeeId) {
+    $("#delete_employee_model").modal('show');
+    if (deleteEmployeeId) {
+        var deleteUrl = "{% url 'AdminDeleteEmployee' id=0 %}".replace(0, deleteEmployeeId);
+        $("#confirmDeleteBtn").attr("href", deleteUrl);
+    }
 }
 </script>
 
