--- a/templates/admin/navigationpanel.html
+++ b/templates/admin/navigationpanel.html
@@ -16,17 +16,17 @@
     <div class="sidebar-inner slimscroll">
         <div class="sidebar-menu" id="sidebar-menu">
             <ul>
-                <li><a href="{% url 'AdminIndex' %}" class="px-0"><span>Admin Dashboard</span></a></li>
+                <li><a href="{% url 'AdminIndex' %}"><i class="lar la-user-circle"></i><span>Admin Dashboard</span></a></li>
                 <li class="menu-title"><span>Employee</span></li>
-                <li><a href="{% url 'AdminEmployeeView' %}"><span>Employee List </span></a></li>
-                <li><a href="{% url 'AdminLeaveList' %}"><span>Leave List</span></a></li>
-                <li><a href="{% url 'AdminHolidays' %}"><span>Holiday</span></a></li>
-                <li><a href="{% url 'AdminDepartmentView' %}"><span>Department</span></a></li>
+                <li><a href="{% url 'AdminEmployeeView' %}"><i class="las la-users"></i><span>Employee List </span></a></li>
+                <li><a href="{% url 'AdminLeaveList' %}"><i class="las la-calendar-minus"></i><span>Leave List</span></a></li>
+                <li><a href="{% url 'AdminHolidays' %}"><i class="las la-calendar-day"></i><span>Holiday</span></a></li>
+                <li><a href="{% url 'AdminDepartmentView' %}"><i class="las la-building"></i><span>Department</span></a></li>
                 <li><a href="{% url 'AdminDesignationView' %}"><span>Designation</span></a></li>
 <!--                <li><a href="clients"><span>Clients</span></a></li>-->
                 <li class="menu-title"><span>Project</span></li>
-                <li><a href="{% url 'AdminProjectsView' %}"><span>Projects</span></a></li>
-                <li><a href="{% url 'AdminProjectTask' %}"><span>Tasks</span></a></li>
+                <li><a href="{% url 'AdminProjectsView' %}"><i class="las la-project-diagram"></i><span>Projects</span></a></li>
+                <li><a href="{% url 'AdminProjectTask' %}"><i class="las la-tasks"></i><span>Tasks</span></a></li>
 <!--                <li><a href="{% url 'AdminDepartmentView' %}"><span>Leads</span></a></li>-->
                 <!--							<li>-->
                 <!--								<a href="tickets.html"><i class="la la-ticket"></i> <span>Tickets</span></a>-->
